namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: notes-app
  labels:
    name: notes-app
    app: notes-application
